styles: Fix BetaFeatures layout on narrow screens
Mixing tablet & desktop upwards and mobile downwards media query
breakpoints for less code.
While the layout is changing the layout to be more flexible and
responsive, it also includes small design and experience improvements
on mobile and desktop, such as slightly bigger thumbnails and
better spacing.

Also
- bringing all code to use Codex design tokens (exception is MonoBook
  override)
-- using a slightly bigger `max-height` token – equal to relative `192px`
   which improves responsive handling and design in general
-- applying Codex spacing tokens which are slightly changing the layout
   but in a negligible way, amending by 1px in two places
- replace fixed unit value sizes with relative `@size-` tokens for
  inclusive user zoom support
- changing a selector to not include id, but class only, for reduced
  specificity
- removing outdated, unused selectors
-- `.mw-htmlform-field-HTMLFeatureField .mw-input`
-- `table.mw-htmlform-container`
- removing outdated comment about Agora design, which is hard to find
even in archived docs pages
- combining `list-style*` properties as we don't need to support
  IE 11 anymore

Additionally, remove the stylelint rule override
for `declaration-property-unit-disallowed-list` which is not necessary
anymore as we are now using design tokens for all sizes and spacing.

Bug: T417348

--- a/resources/betafeatures.nojs.less
+++ b/resources/betafeatures.nojs.less
@@ -16,53 +16,69 @@
  *
  * BetaFeatures styles.
  *
- * Stripped version of the core MediaWiki styles used for agora-style
- * checkboxes and feature fields.
- *
  * @copyright 2013 Mark Holmquist and others; see AUTHORS
  * @license GPL-2.0-or-later
  */
 
 @import 'mediawiki.skin.variables.less';
 
-@indent: 28px;
-
-table.mw-htmlform-container {
-	border-collapse: separate;
-	border-spacing: 0 4px;
-}
-
-.mw-htmlform-field-HTMLFeatureField .mw-input {
-	padding-top: 10px;
-}
+@beta-features-checkbox-indent: @spacing-200;
 
 .mw-ui-feature-header {
-	width: 100%;
-	border-bottom: 1px solid @border-color-muted;
-	margin-bottom: 0.5em;
+	width: @size-full;
+	border-bottom: @border-width-base @border-style-base @border-color-muted;
+}
+
+.mw-ui-feature-main {
+	margin-top: @spacing-100;
 }
 
 .mw-ui-feature-meta,
 .mw-ui-feature-screenshot-contain,
-.mw-ui-feature-title-contain {
-	width: 50%;
+.mw-ui-feature-title-contain,
+.mw-ui-feature-info-links {
+	box-sizing: border-box;
+
+	@media ( min-width: @min-width-breakpoint-tablet ) {
+		display: inline-block;
+		width: @size-half;
+	}
 }
 
 .mw-ui-feature-info-links,
 .mw-ui-feature-title-contain {
-	display: inline-block;
 	vertical-align: bottom;
 }
 
-.mw-ui-feature-screenshot-contain,
-.mw-ui-feature-meta {
-	display: inline-block;
+.mw-ui-feature-meta,
+.mw-ui-feature-screenshot-contain {
 	vertical-align: top;
 }
 
+.mw-ui-feature-screenshot-contain {
+	@media ( max-width: @max-width-breakpoint-mobile ) {
+		margin-top: @spacing-100;
+	}
+}
+
+.mw-ui-feature-meta {
+	padding-right: @spacing-100;
+}
+
 .mw-ui-feature-field {
-	margin-bottom: 68px;
+	margin-bottom: @spacing-400;
 	position: relative;
+}
+
+.mw-htmlform-field-HTMLHorizontalRuleField .mw-input hr,
+.mw-ui-feature-contain {
+	margin-left: @beta-features-checkbox-indent;
+	transition: width @transition-duration-medium @transition-timing-function-system;
+
+	@media ( min-width: @min-width-breakpoint-tablet ) {
+		// Indent to full size minus 64px.
+		width: calc( @size-full - @size-400 );
+	}
 }
 
 .mw-htmlform-field-HTMLHorizontalRuleField .mw-input hr {
@@ -71,29 +87,36 @@ table.mw-htmlform-container {
 	background-color: @border-color-subtle;
 }
 
-.mw-htmlform-field-HTMLHorizontalRuleField .mw-input hr,
-.mw-ui-feature-contain {
-	margin-left: @indent;
-	width: 80%;
-}
+// Paragraphs in the description of a feature. Specificity to override MinervaNeue styles.
+.mw-special-Preferences .mw-htmlform-ooui .mw-ui-feature-description {
+	padding-right: @spacing-100;
 
-.mw-body-content div.mw-ui-feature-description {
-	margin: 1em 0 0 0;
-	padding-right: 1em;
+	@media ( max-width: @max-width-breakpoint-mobile ) {
+		margin-top: @spacing-100;
+		padding-right: 0;
+	}
 }
 
 .mw-ui-feature-discussion-link,
 .mw-ui-feature-info-link {
-	height: 24px;
-	line-height: 24px;
-	padding: 6px 10px;
 	display: inline-block;
-	border-left: 1px solid @border-color-muted;
+	min-height: @size-150;
+	line-height: @size-200;
+	padding: @spacing-25 @spacing-50;
+	border-left: @border-width-base @border-style-base @border-color-muted;
 }
 
 .mw-ui-feature-info-links {
+	margin-top: @spacing-25;
+	// Ensure the info links are always side-by-side.
+	white-space: nowrap;
+
+	@media ( min-width: @min-width-breakpoint-desktop ) {
+		display: inline-block;
+	}
+
 	.oo-ui-iconWidget {
-		margin-right: 5px;
+		margin-right: @spacing-50;
 		opacity: 0.8;
 	}
 
@@ -103,39 +126,38 @@ table.mw-htmlform-container {
 }
 
 .mw-ui-feature-screenshot {
-	margin: 1em 0 0 0;
-	max-height: 150px;
-	max-width: 100%;
+	max-height: @size-1200;
+	max-width: @size-full;
 }
 
 .mw-ui-feature-user-count {
 	color: @color-success;
-	margin: 1em 0 0 0;
+	margin: @spacing-100 0 0 0;
 }
 
 .mw-ui-feature-field .mw-ui-feature-checkbox {
-	float: left;
-
 	.oo-ui-fieldLayout.oo-ui-fieldLayout-align-inline {
 		margin-bottom: 0;
 	}
 }
 
 .mw-ui-feature-title-contain {
-	margin-left: -@indent;
-	margin-right: @indent;
+	margin-left: -@beta-features-checkbox-indent;
+	margin-right: @beta-features-checkbox-indent;
 
 	.oo-ui-fieldLayout-field {
-		padding-top: 0.4em;
+		padding-top: @spacing-25;
 
 		.skin-monobook & {
 			padding-top: 0.7em;
 		}
 	}
 
-	.oo-ui-labelElement-label {
-		font-size: 24px;
-		line-height: 36px;
+	// Overwrite MinervaNeue styles in second selector.
+	.oo-ui-labelElement-label,
+	.oo-ui-window-body.mw-mobile-pref-dialog-body & .oo-ui-labelElement-label {
+		font-size: @size-150;
+		line-height: @size-200;
 	}
 }
 
@@ -147,8 +169,7 @@ table.mw-htmlform-container {
 	}
 
 	> li {
-		list-style-type: none;
-		list-style-image: none;
+		list-style: none;
 	}
 
 	// Hidden by default, shown with JavaScript
